tests/suite/snapshots/all__suite__dependency_scopes_test__provided_scope_lock.snap
---
source: tests/suite/dependency_scopes_test.rs
expression: lock
---
package = []

[[package-local]]
name = "scopelib"
file_name = "scopelib.jar"
packaging = "jar"
root = true
scope = "provided"
path = "<ROOT>/lib/scopelib.jar"
annotations = []
