tests/suite/snapshots/all__suite__dependency_scopes_test__runtime_scope_lock.snap
---
source: tests/suite/dependency_scopes_test.rs
expression: lock
---
package = []

[[package-local]]
file_name = "scopelib.jar"
packaging = "jar"
root = true
scope = "runtime"
path = "<ROOT>/lib/scopelib.jar"
annotations = []
